--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,44 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background: #333;
+  color: #fff;
+  line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container{
+  width: 70%;
+  margin: auto;
+  margin-top: 75px;
+}
+
+.header{
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+input{
+  width: 100%;
+  height: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card{
+  margin-top: 10px;
+  height: 50px;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+#grams{
+  background: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#kilograms{
+  background: green;
+}
+
+#ounces{
+  background: red;
 }
